create, read 적용

--- a/onebite-react/section08-2/src/App.css
+++ b/onebite-react/section08-2/src/App.css
@@ -1,5 +1,7 @@
 .App {
   /* 자식 요소들의 배치를 좀 더 유연하게 할 수 있도록 */
+  width: 500px;
+  margin: 0 auto;
   display: flex;
   /* flex의 방향 세로로 */
   flex-direction: column;
